Add simple benchmark.

--- a/receiver/CMakeLists.txt
+++ b/receiver/CMakeLists.txt
@@ -18,4 +18,9 @@ target_link_libraries(sixelping_receiver PUBLIC prometheus-cpp::pull)
 set_target_properties(sixelping_receiver PROPERTIES COMPILE_FLAGS ${CMAKE_CXX_FLAGS})
 target_link_libraries(sixelping_receiver PUBLIC Boost::program_options Threads::Threads spdlog::spdlog Boost::thread)
 
-package_add_benchmark(pixelbenchmark tests/pixelbenchmark.cpp)
+add_executable(pixelbenchmark tests/pixelbenchmark.cpp src/packets.cpp src/pktmbuf.c src/pixels.cpp)
+target_include_directories(pixelbenchmark PUBLIC include/)
+target_link_libraries(pixelbenchmark PUBLIC dpdk::dpdk)
+target_link_libraries(pixelbenchmark PUBLIC libsixelping)
+target_link_libraries(pixelbenchmark PUBLIC benchmark::benchmark)
+target_link_libraries(pixelbenchmark PUBLIC dl)
